--- a/src/style.css
+++ b/src/style.css
@@ -23,11 +23,8 @@ a:hover {
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  width: 100%;
+  height: auto;
 }
 
 h1 {
@@ -59,10 +56,14 @@ button:focus-visible {
 }
 
 #app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  /* background: #576776 url("./assets/wangtao.jpeg"); */
+  -webkit-background-size: cover;
+  background-color: #576776;
+  width: 100%;
+  height: 100%;
 }
 
 @media (prefers-color-scheme: light) {
