--- a/src/style.css
+++ b/src/style.css
@@ -18,6 +18,7 @@ a {
   color: #646cff;
   text-decoration: inherit;
 }
+
 a:hover {
   color: #535bf2;
 }
@@ -43,9 +44,11 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
+
 button:hover {
   border-color: #646cff;
 }
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
@@ -57,10 +60,9 @@ button:focus-visible {
 
 #app {
   position: fixed;
+  background-color: #eeefef;
   top: 0;
   left: 0;
-  /* background: #576776 url("./assets/wangtao.jpeg"); */
-  background-color: #576776;
   width: 100%;
   height: 100%;
 }
@@ -70,9 +72,11 @@ button:focus-visible {
     color: #213547;
     background-color: #ffffff;
   }
+
   a:hover {
     color: #747bff;
   }
+
   button {
     background-color: #f9f9f9;
   }
