完成底部footer和404页的页面

--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,14 +1,20 @@
 .footer {
     font-size: 12px;
-    background-color: #e7e9eb;
+    background-color: #545c64;
     height: 100px;
     display: flex;
     justify-content: center;
     align-items: center;
+    position: absolute;
+    color: #ffffff;
+    width: 100%;
+    bottom: 0;
 }
+
 .footer .footer1 {
     margin: 0 25px;
 }
+
 .footer1 div:first-child {
     margin-bottom: 10px;
 }
