--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -8,6 +8,9 @@
     font-weight: 700;
     padding: 8px 20px;
 }
+.el-header {
+    --el-header-padding: 0;
+}
 
 .header .right {
     display: flex;
